# websocket_endpoint

./: .cproject  .project  CMakeLists.txt
Debug/: makefile
Debug/src/: connection_metadata.d  sio_packet.d  sio_packet_manager.d  subdir.mk  websocket_endpoint.d
header/: connection_metadata.h  sio_message.h  sio_packet.h  sio_packet_manager.h  websocket_endpoint.h
include/openssl/: opensslconf.h
include/rapidjson/: schema.h
include/rapidjson/internal/: dtoa.h
include/websocketpp/common/: platforms.hpp  system_error.hpp
include/websocketpp/roles/: client_endpoint.hpp
lib/Boost_ARM_lib/: libboost_atomic.so.1.60.0  libboost_chrono.so.1.60.0  libboost_container.so.1.60.0  libboost_date_time.so.1.60.0  libboost_filesystem.so.1.60.0  libboost_graph.so.1.60.0  libboost_locale.so.1.60.0  libboost_log.so.1.60.0  libboost_log_setup.so.1.60.0  libboost_math_c99.so.1.60.0  libboost_math_c99f.so.1.60.0  libboost_math_c99l.so.1.60.0  libboost_math_tr1.so.1.60.0  libboost_math_tr1f.so.1.60.0  libboost_math_tr1l.so.1.60.0  libboost_prg_exec_monitor.so.1.60.0  libboost_program_options.so.1.60.0  libboost_random.so.1.60.0  libboost_regex.so.1.60.0  libboost_serialization.so.1.60.0  libboost_signals.so.1.60.0  libboost_system.so.1.60.0  libboost_thread.so.1.60.0  libboost_timer.so.1.60.0  libboost_type_erasure.so.1.60.0  libboost_unit_test_framework.so.1.60.0  libboost_wave.so.1.60.0  libboost_wserialization.so.1.60.0
lib/OpenSSL_lib/pkgconfig/: libcrypto.pc  libssl.pc  (+1 more)
src/: connection_metadata.cpp  sio_packet.cpp  sio_packet_manager.cpp  websocket_endpoint.cpp
(+3 files in other folders)
